--- a/kurtosis_package/kurtosis.yml
+++ b/kurtosis_package/kurtosis.yml
@@ -3,7 +3,9 @@ description: |
   Runs an Ethereum devnet with EigenLayer and AVS contracts plus off-chain services
 replace:
   # Fix to a specific version of kurtosis ethereum package to avoid breaking changes
-  # Version is from 2024-11-01
+  # Version from 2024-11-01
   github.com/ethpandaops/ethereum-package: github.com/ethpandaops/ethereum-package@861cf2ec532efe6cc2496f53af192826607e7524
-  # Version from 2024-11-22
+  # Versions from 2024-11-25
   github.com/kurtosis-tech/prometheus-package: github.com/kurtosis-tech/prometheus-package@581d6d5ad433092964255399275079b57686a2b3
+  github.com/kurtosis-tech/postgres-package: github.com/kurtosis-tech/postgres-package@2d363be1bc42524f6b0575cac0bbc0fd194ae173
+  github.com/kurtosis-tech/redis-package: github.com/kurtosis-tech/redis-package@60bbe72d448f94799c7896f1443e3010db6441af
