--- a/examples/hello_world_local.yaml
+++ b/examples/hello_world_local.yaml
@@ -2,6 +2,12 @@
 # This file can be used inside the hello-world-avs repo to start
 # a devnet with any local changes
 # TODO: move this to the hello-world-avs repo
+
+# To run this example:
+# 1. Clone the https://github.com/Layr-Labs/hello-world-avs repo
+# 2. Copy this file inside that repo (on the root)
+# 3. While inside that repo, run `devnet start hello_world_local.yaml`
+
 deployments:
   - name: EigenLayer
     repo: "."
