--- a/examples/hello_world_local.yaml
+++ b/examples/hello_world_local.yaml
@@ -12,7 +12,7 @@ deployments:
   - name: EigenLayer
     repo: "."
     contracts_path: "contracts"
-    script: script/DeployEigenLayerCore.s.sol
+    script: script/DeployEigenLayerCore.s.sol:DeployEigenlayerCore
     env:
       # NOTE: this is used inside the deployer script
       PRIVATE_KEY: "0x{{.deployer_private_key}}"
