--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,6 +117,11 @@ jobs:
           echo "$(dirname $(which kurtosis))" >> $GITHUB_PATH
         shell: bash
 
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
