--- a/examples/hello_world.yaml
+++ b/examples/hello_world.yaml
@@ -7,7 +7,7 @@ deployments:
     script: script/DeployEigenLayerCore.s.sol
     env:
       # NOTE: this is used inside the deployer script
-      PRIVATE_KEY: "{{.deployer_private_key}}"
+      PRIVATE_KEY: "0x{{.deployer_private_key}}"
       # NOTE: these are needed because of repo's `foundry.toml`
       HOLESKY_PRIVATE_KEY: ""
       HOLESKY_RPC_URL: ""
@@ -22,7 +22,7 @@ deployments:
     script: script/HelloWorldDeployer.s.sol
     env:
       # NOTE: this is used inside the deployer script
-      PRIVATE_KEY: "{{.deployer_private_key}}"
+      PRIVATE_KEY: "0x{{.deployer_private_key}}"
       # NOTE: these are needed because of repo's `foundry.toml`
       HOLESKY_PRIVATE_KEY: ""
       HOLESKY_RPC_URL: ""
