--- a/examples/incredible_squaring.yaml
+++ b/examples/incredible_squaring.yaml
@@ -69,38 +69,34 @@ keys:
 artifacts:
   aggregator-config:
     files:
-      aggregator-config.yaml: |
-        # 'production' only prints info and above. 'development' also prints debug
-        environment: production
-        eth_rpc_url: {{.http_rpc_url}}
-        eth_ws_url: {{.ws_rpc_url}}
-        # address which the aggregator listens on for operator signed messages
-        aggregator_server_ip_port_address: 0.0.0.0:8090
+      aggregator-config.yaml:
+        template: |
+          # 'production' only prints info and above. 'development' also prints debug
+          environment: production
+          eth_rpc_url: {{.http_rpc_url}}
+          eth_ws_url: {{.ws_rpc_url}}
+          # address which the aggregator listens on for operator signed messages
+          aggregator_server_ip_port_address: 0.0.0.0:8090
 
   operator-config:
-    # TODO: maybe add this eagerly
-    additional_data:
-      avs_addresses:
-        avs_registry_coordinator_address: ".addresses.registryCoordinator"
-        operator_state_retriever_address: ".addresses.operatorStateRetriever"
-        token_strategy_addr: ".addresses.erc20MockStrategy"
     files:
-      operator-config.yaml: |
-        production: False
-        operator_address: {{.keys.operator_ecdsa_keys.address}}
-        avs_registry_coordinator_address: {{.avs_registry_coordinator_address}}
-        operator_state_retriever_address: {{.operator_state_retriever_address}}
-        eth_rpc_url: {{.http_rpc_url}}
-        eth_ws_url: {{.ws_rpc_url}}
-        ecdsa_private_key_store_path: /usr/src/app/config-files/keys/1.ecdsa.key.json
-        bls_private_key_store_path: /usr/src/app/config-files/keys/1.bls.key.json
-        aggregator_server_ip_port_address: {{.services.aggregator.ip_address}}:8090
-        eigen_metrics_ip_port_address: "0.0.0.0:8081"
-        enable_metrics: False
-        node_api_ip_port_address: "0.0.0.0:8080"
-        enable_node_api: True
-        register_operator_on_startup: True
-        token_strategy_addr: {{.token_strategy_addr}}
+      operator-config.yaml:
+        template: |
+          production: False
+          operator_address: {{.keys.operator_ecdsa_keys.address}}
+          avs_registry_coordinator_address: {{.addresses.incredible_squaring.registryCoordinator}}
+          operator_state_retriever_address: {{.addresses.incredible_squaring.operatorStateRetriever}}
+          eth_rpc_url: {{.http_rpc_url}}
+          eth_ws_url: {{.ws_rpc_url}}
+          ecdsa_private_key_store_path: /usr/src/app/config-files/keys/1.ecdsa.key.json
+          bls_private_key_store_path: /usr/src/app/config-files/keys/1.bls.key.json
+          aggregator_server_ip_port_address: {{.services.aggregator.ip_address}}:8090
+          eigen_metrics_ip_port_address: "0.0.0.0:8081"
+          enable_metrics: False
+          node_api_ip_port_address: "0.0.0.0:8080"
+          enable_node_api: True
+          register_operator_on_startup: True
+          token_strategy_addr: {{.addresses.incredible_squaring.erc20MockStrategy}}
 
 ethereum_package:
   additional_services:
