--- a/examples/eigenda.yaml
+++ b/examples/eigenda.yaml
@@ -44,6 +44,8 @@ services:
         transport_protocol: TCP
         application_protocol: "http"
     env:
+      CHURNER_LOG_LEVEL: debug
+      CHURNER_VERBOSE: true
       CHURNER_HOSTNAME: "unused"
       CHURNER_GRPC_PORT: "8080"
       CHURNER_BLS_OPERATOR_STATE_RETRIVER: "{{.addresses.EigenDA.operatorStateRetriever}}"
@@ -69,6 +71,8 @@ services:
         transport_protocol: TCP
         application_protocol: "http"
     env:
+      DISPERSER_SERVER_LOG_LEVEL: debug
+      DISPERSER_SERVER_VERBOSE: true
       DISPERSER_SERVER_S3_BUCKET_NAME: "test-eigenda-blobstore"
       DISPERSER_SERVER_DYNAMODB_TABLE_NAME: "test-BlobMetadata"
       DISPERSER_SERVER_RATE_BUCKET_TABLE_NAME: ""
@@ -112,40 +116,48 @@ services:
     input:
       /kzg/: kzg_config
     env:
-      DISPERSER_ENCODER_S3_BUCKET_NAME: "test-eigenda-blobstore"
-      DISPERSER_ENCODER_DYNAMODB_TABLE_NAME: "test-BlobMetadata"
-      DISPERSER_ENCODER_RATE_BUCKET_TABLE_NAME: ""
-      DISPERSER_ENCODER_RATE_BUCKET_STORE_SIZE: "100000"
+      DISPERSER_ENCODER_LOG_LEVEL: debug
+      DISPERSER_ENCODER_VERBOSE: true
       DISPERSER_ENCODER_GRPC_PORT: "8080"
       DISPERSER_ENCODER_ENABLE_METRICS: "true"
       DISPERSER_ENCODER_METRICS_HTTP_PORT: "9100"
-      DISPERSER_ENCODER_CHAIN_RPC: "{{.http_rpc_url}}"
-      DISPERSER_ENCODER_PRIVATE_KEY: "{{.keys.disperser_key.private_key}}"
-      DISPERSER_ENCODER_NUM_CONFIRMATIONS: "0"
-      DISPERSER_ENCODER_REGISTERED_QUORUM_ID: "0,1"
-      DISPERSER_ENCODER_TOTAL_UNAUTH_BYTE_RATE: "10000000,10000000"
-      DISPERSER_ENCODER_PER_USER_UNAUTH_BYTE_RATE: "32000,32000"
-      DISPERSER_ENCODER_TOTAL_UNAUTH_BLOB_RATE: "10,10"
-      DISPERSER_ENCODER_PER_USER_UNAUTH_BLOB_RATE: "2,2"
-      DISPERSER_ENCODER_ENABLE_RATELIMITER: "true"
-      DISPERSER_ENCODER_RETRIEVAL_BLOB_RATE: "4"
-      DISPERSER_ENCODER_RETRIEVAL_BYTE_RATE: "10000000"
-      DISPERSER_ENCODER_BUCKET_SIZES: "5s"
-      DISPERSER_ENCODER_BUCKET_MULTIPLIERS: "1"
-      DISPERSER_ENCODER_COUNT_FAILED: "true"
-      DISPERSER_ENCODER_BLS_OPERATOR_STATE_RETRIVER: "{{.addresses.EigenDA.operatorStateRetriever}}"
-      DISPERSER_ENCODER_EIGENDA_SERVICE_MANAGER: "{{.addresses.EigenDA.serviceManager}}"
-      DISPERSER_ENCODER_AWS_ENDPOINT_URL: "{{.services.localstack.ip_address}}:4566"
       DISPERSER_ENCODER_AWS_REGION: "us-east-1"
-      DISPERSER_ENCODER_AWS_ACCESS_KEY_ID: localstack
-      DISPERSER_ENCODER_AWS_SECRET_ACCESS_KEY: localstack
       DISPERSER_ENCODER_G1_PATH: /kzg/g1.point
       DISPERSER_ENCODER_G2_PATH: /kzg/g2.point
       DISPERSER_ENCODER_CACHE_PATH: /kzg/cache
       DISPERSER_ENCODER_SRS_ORDER: 3000
       DISPERSER_ENCODER_SRS_LOAD: 2900
-      DISPERSER_ENCODER_MAX_CONCURRENT_REQUESTS: 16
-      DISPERSER_ENCODER_REQUEST_POOL_SIZE: 32
+
+  - name: batcher
+    image: eigenda-batcher
+    build_cmd: "docker build . -t eigenda-batcher --target batcher"
+    ports:
+      metrics:
+        number: 9100
+        transport_protocol: TCP
+        application_protocol: "http"
+    env:
+      BATCHER_LOG_LEVEL: debug
+      BATCHER_VERBOSE: true
+      BATCHER_S3_BUCKET_NAME: "test-eigenda-blobstore"
+      BATCHER_DYNAMODB_TABLE_NAME: "test-BlobMetadata"
+      BATCHER_PULL_INTERVAL: "1s"
+      BATCHER_BLS_OPERATOR_STATE_RETRIVER: "{{.addresses.EigenDA.operatorStateRetriever}}"
+      BATCHER_EIGENDA_SERVICE_MANAGER: "{{.addresses.EigenDA.serviceManager}}"
+      BATCHER_ENCODER_ADDRESS: "{{.services.encoder.ip_address}}"
+      BATCHER_ENABLE_METRICS: true
+      BATCHER_METRICS_HTTP_PORT: 9100
+      BATCHER_BATCH_SIZE_LIMIT: 10240
+      BATCHER_USE_GRAPH: false
+      BATCHER_GRAPH_URL: ""
+      BATCHER_SRS_ORDER: 3000
+      BATCHER_CHAIN_RPC: "{{.http_rpc_url}}"
+      # TODO: this requires a private key without a leading "0x"
+      BATCHER_PRIVATE_KEY: "{{.deployer_private_key}}"
+      BATCHER_AWS_REGION: "us-east-1"
+      BATCHER_KMS_KEY_DISABLE: true
+      BATCHER_KMS_KEY_ID: ""
+      BATCHER_KMS_KEY_REGION: ""
 
 # Specify keys to generate
 keys:
