feat: add node & retriever

--- a/examples/eigenda.yaml
+++ b/examples/eigenda.yaml
@@ -1,3 +1,9 @@
+# TODOs:
+# - check if contracts are deployed correctly
+# - register operators
+# - set up S3 bucket
+# - verify AWS params
+# - check if we need to provide unique private keys to each service
 deployments:
   - name: EigenDA
     repo: https://github.com/Layr-Labs/eigenda.git
@@ -46,7 +52,7 @@ services:
     env:
       CHURNER_LOG_LEVEL: debug
       CHURNER_VERBOSE: true
-      CHURNER_HOSTNAME: "unused"
+      CHURNER_HOSTNAME: "churner"
       CHURNER_GRPC_PORT: "8080"
       CHURNER_BLS_OPERATOR_STATE_RETRIVER: "{{.addresses.EigenDA.operatorStateRetriever}}"
       CHURNER_EIGENDA_SERVICE_MANAGER: "{{.addresses.EigenDA.serviceManager}}"
@@ -152,12 +158,100 @@ services:
       BATCHER_GRAPH_URL: ""
       BATCHER_SRS_ORDER: 3000
       BATCHER_CHAIN_RPC: "{{.http_rpc_url}}"
-      # TODO: this requires a private key without a leading "0x"
-      BATCHER_PRIVATE_KEY: "{{.deployer_private_key}}"
+      # This removes the leading "0x" from the private key
+      BATCHER_PRIVATE_KEY: "{{slice .keys.disperser_key.private_key 2}}"
       BATCHER_AWS_REGION: "us-east-1"
       BATCHER_KMS_KEY_DISABLE: true
       BATCHER_KMS_KEY_ID: ""
       BATCHER_KMS_KEY_REGION: ""
+
+  - name: retriever
+    image: eigenda-retriever
+    build_cmd: "docker build . -t eigenda-retriever --target retriever"
+    ports:
+      grpc:
+        number: 8080
+        transport_protocol: TCP
+        application_protocol: "grpc"
+      metrics:
+        number: 9100
+        transport_protocol: TCP
+        application_protocol: "http"
+    input:
+      /kzg/: kzg_config
+    env:
+      RETRIEVER_LOG_LEVEL: debug
+      RETRIEVER_VERBOSE: true
+      RETRIEVER_HOSTNAME: "retriever"
+      RETRIEVER_GRPC_PORT: "8080"
+      RETRIEVER_TIMEOUT: "20s"
+      RETRIEVER_BLS_OPERATOR_STATE_RETRIVER: "{{.addresses.EigenDA.operatorStateRetriever}}"
+      RETRIEVER_EIGENDA_SERVICE_MANAGER: "{{.addresses.EigenDA.serviceManager}}"
+      RETRIEVER_G1_PATH: /kzg/g1.point
+      RETRIEVER_G2_PATH: /kzg/g2.point
+      RETRIEVER_CACHE_PATH: /kzg/cache
+      RETRIEVER_SRS_ORDER: 3000
+      RETRIEVER_SRS_LOAD: 2900
+      RETRIEVER_CHAIN_RPC: "{{.http_rpc_url}}"
+      RETRIEVER_PRIVATE_KEY: "{{slice .keys.disperser_key.private_key 2}}"
+      RETRIEVER_ENABLE_METRICS: true
+      RETRIEVER_METRICS_HTTP_PORT: 9100
+      RETRIEVER_GRAPH_URL: ""
+
+  - name: node
+    image: eigenda-node
+    build_cmd: "docker build . -t eigenda-node --target node"
+    ports:
+      dispersal:
+        number: 8080
+        transport_protocol: TCP
+        application_protocol: "grpc"
+      retrieval:
+        number: 8081
+        transport_protocol: TCP
+        application_protocol: "grpc"
+      nodeapi:
+        number: 9091
+        transport_protocol: TCP
+        application_protocol: "http"
+      metrics:
+        number: 9100
+        transport_protocol: TCP
+        application_protocol: "http"
+    input:
+      /kzg/: kzg_config
+      /keys/ecdsa: operator1_ecdsa
+      /keys/bls: operator1_bls
+    env:
+      NODE_LOG_LEVEL: debug
+      NODE_VERBOSE: true
+      NODE_HOSTNAME: node
+      NODE_DISPERSAL_PORT: 8080
+      NODE_RETRIEVAL_PORT: 8081
+      NODE_ENABLE_METRICS: true
+      NODE_METRICS_PORT: 9100
+      NODE_ENABLE_NODE_API: true
+      NODE_API_PORT: 9091
+      NODE_TIMEOUT: "20s"
+      NODE_QUORUM_ID_LIST: "0,1"
+      NODE_DB_PATH: "/var/nodedb"
+      NODE_BLS_OPERATOR_STATE_RETRIVER: "{{.addresses.EigenDA.operatorStateRetriever}}"
+      NODE_EIGENDA_SERVICE_MANAGER: "{{.addresses.EigenDA.serviceManager}}"
+      # TODO: find a way to provide correct IP address, or if it's even needed
+      NODE_PUBLIC_IP_PROVIDER: mockip
+      NODE_CHURNER_URL: "{{.services.churner.ip_address}}"
+      NODE_G1_PATH: /kzg/g1.point
+      NODE_G2_PATH: /kzg/g2.point
+      NODE_CACHE_PATH: /kzg/cache
+      NODE_SRS_ORDER: 3000
+      NODE_SRS_LOAD: 2900
+      NODE_CHAIN_RPC: "{{.http_rpc_url}}"
+      # TODO: check if we need this, and provide provide a unique one
+      NODE_PRIVATE_KEY: "{{slice .keys.disperser_key.private_key 2}}"
+      NODE_ECDSA_KEY_FILE: /keys/ecdsa/keys/1.ecdsa.key.json
+      NODE_ECDSA_KEY_PASSWORD: "{{.keys.operator1_ecdsa.password}}"
+      NODE_BLS_KEY_FILE: /keys/bls/keys/1.bls.key.json
+      NODE_BLS_KEY_PASSWORD: "{{.keys.operator1_bls.password}}"
 
 # Specify keys to generate
 keys:
