--- a/examples/eigenda.yaml
+++ b/examples/eigenda.yaml
@@ -31,6 +31,8 @@ deployments:
 services:
   - name: localstack
     image: localstack/localstack
+    env:
+      DEBUG: 1
     ports:
       gateway:
         number: 4566
@@ -76,7 +78,7 @@ services:
       - "--provisioned-throughput"
       - "ReadCapacityUnits=10,WriteCapacityUnits=10"
       - "--global-secondary-indexes"
-      - "[{\"IndexName\": \"statusIndexName\", \"KeySchema\": [{\"AttributeName\": \"BlobStatus\", \"KeyType\": \"HASH\"},{\"AttributeName\": \"RequestedAt\", \"KeyType\": \"RANGE\"}],\"Projection\": {\"ProjectionType\": \"ALL\"},\"ProvisionedThroughput\": {\"ReadCapacityUnits\": 5, \"WriteCapacityUnits\": 5}},{\"IndexName\": \"batchIndexName\",\"KeySchema\": [{\"AttributeName\": \"BatchHeaderHash\", \"KeyType\": \"HASH\"},{\"AttributeName\": \"BlobIndex\", \"KeyType\": \"RANGE\"}],\"Projection\": {\"ProjectionType\": \"ALL\"},\"ProvisionedThroughput\": {\"ReadCapacityUnits\": 5, \"WriteCapacityUnits\": 5}},{\"IndexName\": \"expiryIndexName\",\"KeySchema\": [{\"AttributeName\": \"BlobStatus\", \"KeyType\": \"HASH\"},{\"AttributeName\": \"Expiry\", \"KeyType\": \"RANGE\"}],\"Projection\": {\"ProjectionType\": \"ALL\"},\"ProvisionedThroughput\": {\"ReadCapacityUnits\": 5, \"WriteCapacityUnits\": 5}}]" 
+      - "[{\"IndexName\": \"StatusIndex\", \"KeySchema\": [{\"AttributeName\": \"BlobStatus\", \"KeyType\": \"HASH\"},{\"AttributeName\": \"RequestedAt\", \"KeyType\": \"RANGE\"}],\"Projection\": {\"ProjectionType\": \"ALL\"},\"ProvisionedThroughput\": {\"ReadCapacityUnits\": 5, \"WriteCapacityUnits\": 5}},{\"IndexName\": \"BatchIndex\",\"KeySchema\": [{\"AttributeName\": \"BatchHeaderHash\", \"KeyType\": \"HASH\"},{\"AttributeName\": \"BlobIndex\", \"KeyType\": \"RANGE\"}],\"Projection\": {\"ProjectionType\": \"ALL\"},\"ProvisionedThroughput\": {\"ReadCapacityUnits\": 5, \"WriteCapacityUnits\": 5}},{\"IndexName\": \"Status-Expiry-Index\",\"KeySchema\": [{\"AttributeName\": \"BlobStatus\", \"KeyType\": \"HASH\"},{\"AttributeName\": \"Expiry\", \"KeyType\": \"RANGE\"}],\"Projection\": {\"ProjectionType\": \"ALL\"},\"ProvisionedThroughput\": {\"ReadCapacityUnits\": 5, \"WriteCapacityUnits\": 5}}]" 
       - "--endpoint-url"
       - "http://{{.services.localstack.ip_address}}:4566/"
       - "--region"
