--- a/examples/eigenda.yaml
+++ b/examples/eigenda.yaml
@@ -315,7 +315,7 @@ services:
       BATCHER_PULL_INTERVAL: "1s"
       BATCHER_BLS_OPERATOR_STATE_RETRIVER: "{{.addresses.EigenDA.operatorStateRetriever}}"
       BATCHER_EIGENDA_SERVICE_MANAGER: "{{.addresses.EigenDA.serviceManager}}"
-      BATCHER_ENCODER_ADDRESS: "{{.services.encoder.ip_address}}"
+      BATCHER_ENCODER_ADDRESS: "{{.services.encoder.ip_address}}:8080"
       BATCHER_ENABLE_METRICS: true
       BATCHER_METRICS_HTTP_PORT: 9100
       BATCHER_BATCH_SIZE_LIMIT: 10240
@@ -332,6 +332,7 @@ services:
       BATCHER_AWS_ACCESS_KEY_ID: "localstack"
       BATCHER_AWS_SECRET_ACCESS_KEY: "localstack"
       BATCHER_AWS_ENDPOINT_URL: "http://{{.services.localstack.ip_address}}:4566"
+      BATCHER_FINALIZATION_BLOCK_DELAY: 0
 
 
   - name: traffic-generator
