--- a/examples/eigenda.yaml
+++ b/examples/eigenda.yaml
@@ -1,3 +1,4 @@
+# Example devnet config file for the EigenDA AVS (https://github.com/Layr-Labs/eigenda)
 deployments:
   # NOTE: this script also deploys EigenLayer contracts
   - name: EigenDA
