--- a/examples/eigenda.yaml
+++ b/examples/eigenda.yaml
@@ -1,4 +1,12 @@
 # Example devnet config file for the EigenDA AVS (https://github.com/Layr-Labs/eigenda)
+# This file can be used inside the EigenDA repo to start a devnet with any local changes
+# TODO: move this to the EigenDA repo
+
+# To run this example:
+# 1. Clone the https://github.com/Layr-Labs/eigenda repo
+# 2. Copy this file inside that repo (on the root)
+# 3. While inside that repo, run `devnet start eigenda.yaml`
+
 deployments:
   # NOTE: this script also deploys EigenLayer contracts
   - name: EigenDA
