--- a/examples/eigenda.yaml
+++ b/examples/eigenda.yaml
@@ -358,6 +358,8 @@ services:
         number: 7300
         transport_protocol: TCP
         application_protocol: "http"
+    input:
+      /app/resources: kzg_config
     env:
       EIGENDA_PROXY_ADDR: "0.0.0.0"
       EIGENDA_PROXY_PORT: 4242
