--- a/examples/eigenda.yaml
+++ b/examples/eigenda.yaml
@@ -346,6 +346,7 @@ services:
       - "--traffic-generator.data-size"
       - "1024"
 
+  # TODO: proxy and disperser seem to use different SRS parameters by default
   - name: eigenda-proxy
     image: eigenda-proxy
     build_context: eigenda-proxy
@@ -358,8 +359,6 @@ services:
         number: 7300
         transport_protocol: TCP
         application_protocol: "http"
-    input:
-      /app/resources: kzg_config
     env:
       EIGENDA_PROXY_ADDR: "0.0.0.0"
       EIGENDA_PROXY_PORT: 4242
