--- a/examples/eigenda.yaml
+++ b/examples/eigenda.yaml
@@ -335,54 +335,42 @@ services:
     image: traffic-generator
     build_context: "."
     build_file: trafficgenerator.Dockerfile
-    # env:
-    #   # This sets the hostname and port of the disperser
-    #   TRAFFIC_GENERATOR_HOSTNAME: "{{.services.disperser.ip_address}}"
-    #   TRAFFIC_GENERATOR_GRPC_PORT: "8080"
+    env:
+      # This sets the hostname and port of the disperser
+      TRAFFIC_GENERATOR_HOSTNAME: "{{.services.disperser.ip_address}}"
+      TRAFFIC_GENERATOR_GRPC_PORT: "8080"
 
-    #   TRAFFIC_GENERATOR_NUM_INSTANCES: "0"
-    #   TRAFFIC_GENERATOR_REQUEST_INTERVAL: 5s
-    #   TRAFFIC_GENERATOR_DATA_SIZE: "1024"
-    #   TRAFFIC_GENERATOR_SIGNER_PRIVATE_KEY_HEX: "{{slice .keys.proxy_signer.private_key 2}}"
-    cmd:
-      - "--traffic-generator.disperser-hostname"
-      - "{{.services.disperser.ip_address}}"
-      - "--traffic-generator.disperser-port"
-      - "8080"
-      - "--traffic-generator.num-instances"
-      - "1"
-      - "--traffic-generator.request-interval"
-      - "5s"
-      - "--traffic-generator.data-size"
-      - "1024"
+      TRAFFIC_GENERATOR_NUM_INSTANCES: "1"
+      TRAFFIC_GENERATOR_REQUEST_INTERVAL: 5s
+      TRAFFIC_GENERATOR_DATA_SIZE: "1024"
 
   # TODO: proxy and disperser seem to use different SRS parameters by default
-  - name: eigenda-proxy
-    image: eigenda-proxy
-    build_context: eigenda-proxy
-    ports:
-      rpc:
-        number: 4242
-        transport_protocol: TCP
-        application_protocol: "http"
-      metrics:
-        number: 7300
-        transport_protocol: TCP
-        application_protocol: "http"
-    env:
-      EIGENDA_PROXY_ADDR: "0.0.0.0"
-      EIGENDA_PROXY_PORT: 4242
-      EIGENDA_PROXY_MEMSTORE_ENABLED: false
-      EIGENDA_PROXY_MEMSTORE_EXPIRATION: 45m
-      EIGENDA_PROXY_EIGENDA_SIGNER_PRIVATE_KEY_HEX: "{{slice .keys.proxy_signer.private_key 2}}"
-      EIGENDA_PROXY_EIGENDA_DISPERSER_RPC: "{{.services.disperser.ip_address}}:8080"
-      EIGENDA_PROXY_EIGENDA_SERVICE_MANAGER_ADDR: "{{.addresses.EigenDA.serviceManager}}"
-      EIGENDA_PROXY_EIGENDA_ETH_RPC: "{{.http_rpc_url}}"
-      EIGENDA_PROXY_EIGENDA_ETH_CONFIRMATION_DEPTH: 0
-      EIGENDA_PROXY_METRICS_ADDR: "0.0.0.0"
-      EIGENDA_PROXY_METRICS_ENABLED: true
-      EIGENDA_PROXY_METRICS_PORT: 7300
-      EIGENDA_PROXY_EIGENDA_GRPC_DISABLE_TLS: true
+  # - name: eigenda-proxy
+  #   image: eigenda-proxy
+  #   build_context: eigenda-proxy
+  #   ports:
+  #     rpc:
+  #       number: 4242
+  #       transport_protocol: TCP
+  #       application_protocol: "http"
+  #     metrics:
+  #       number: 7300
+  #       transport_protocol: TCP
+  #       application_protocol: "http"
+  #   env:
+  #     EIGENDA_PROXY_ADDR: "0.0.0.0"
+  #     EIGENDA_PROXY_PORT: 4242
+  #     EIGENDA_PROXY_MEMSTORE_ENABLED: false
+  #     EIGENDA_PROXY_MEMSTORE_EXPIRATION: 45m
+  #     EIGENDA_PROXY_EIGENDA_SIGNER_PRIVATE_KEY_HEX: "{{slice .keys.proxy_signer.private_key 2}}"
+  #     EIGENDA_PROXY_EIGENDA_DISPERSER_RPC: "{{.services.disperser.ip_address}}:8080"
+  #     EIGENDA_PROXY_EIGENDA_SERVICE_MANAGER_ADDR: "{{.addresses.EigenDA.serviceManager}}"
+  #     EIGENDA_PROXY_EIGENDA_ETH_RPC: "{{.http_rpc_url}}"
+  #     EIGENDA_PROXY_EIGENDA_ETH_CONFIRMATION_DEPTH: 0
+  #     EIGENDA_PROXY_METRICS_ADDR: "0.0.0.0"
+  #     EIGENDA_PROXY_METRICS_ENABLED: true
+  #     EIGENDA_PROXY_METRICS_PORT: 7300
+  #     EIGENDA_PROXY_EIGENDA_GRPC_DISABLE_TLS: true
 
 # Specify keys to generate
 keys:
@@ -421,13 +409,6 @@ artifacts:
             "initialSupply": "0x3635c9adc5dea00000",
             "tokenOwner": "{{.deployer_address}}",
             "maxOperatorCount": 3
-          }
-  context:
-    files:
-      context.json:
-        template: |
-          {
-            ".": "{{.}}"
           }
 
   kzg_config:
