--- a/examples/eigenda.yaml
+++ b/examples/eigenda.yaml
@@ -32,7 +32,7 @@ deployments:
       EIGENDA_SERVICE_MANAGER: "{{.addresses.EigenDA.serviceManager}}"
 
 services:
-  - name: node
+  - name: node1
     image: eigenda-node
     build_cmd: "docker build . -t eigenda-node --target node"
     ports:
@@ -54,12 +54,12 @@ services:
         application_protocol: "http"
     input:
       /kzg/: kzg_config
-      /keys/ecdsa: operator1_ecdsa
-      /keys/bls: operator1_bls
+      /keys/ecdsa: node1_ecdsa
+      /keys/bls: node1_bls
     env:
       NODE_LOG_LEVEL: debug
       NODE_VERBOSE: true
-      NODE_HOSTNAME: node
+      NODE_HOSTNAME: node1
       NODE_DISPERSAL_PORT: 8080
       NODE_RETRIEVAL_PORT: 8081
       NODE_ENABLE_METRICS: true
@@ -79,11 +79,121 @@ services:
       NODE_SRS_ORDER: 3000
       NODE_SRS_LOAD: 2900
       NODE_CHAIN_RPC: "{{.http_rpc_url}}"
-      NODE_PRIVATE_KEY: "{{slice .keys.operator1_ecdsa.private_key 2}}"
+      NODE_PRIVATE_KEY: "{{slice .keys.node1_ecdsa.private_key 2}}"
       NODE_ECDSA_KEY_FILE: /keys/ecdsa/keys/1.ecdsa.key.json
-      NODE_ECDSA_KEY_PASSWORD: "{{.keys.operator1_ecdsa.password}}"
+      NODE_ECDSA_KEY_PASSWORD: "{{.keys.node1_ecdsa.password}}"
       NODE_BLS_KEY_FILE: /keys/bls/keys/1.bls.key.json
-      NODE_BLS_KEY_PASSWORD: "{{.keys.operator1_bls.password}}"
+      NODE_BLS_KEY_PASSWORD: "{{.keys.node1_bls.password}}"
+      NODE_REGISTER_AT_NODE_START: true
+      NODE_PUBLIC_IP_CHECK_INTERVAL: 0
+
+  - name: node2
+    image: eigenda-node
+    build_cmd: "docker build . -t eigenda-node --target node"
+    ports:
+      dispersal:
+        number: 8080
+        transport_protocol: TCP
+        application_protocol: "grpc"
+      retrieval:
+        number: 8081
+        transport_protocol: TCP
+        application_protocol: "grpc"
+      nodeapi:
+        number: 9091
+        transport_protocol: TCP
+        application_protocol: "http"
+      metrics:
+        number: 9100
+        transport_protocol: TCP
+        application_protocol: "http"
+    input:
+      /kzg/: kzg_config
+      /keys/ecdsa: node2_ecdsa
+      /keys/bls: node2_bls
+    env:
+      NODE_LOG_LEVEL: debug
+      NODE_VERBOSE: true
+      NODE_HOSTNAME: node2
+      NODE_DISPERSAL_PORT: 8080
+      NODE_RETRIEVAL_PORT: 8081
+      NODE_ENABLE_METRICS: true
+      NODE_METRICS_PORT: 9100
+      NODE_ENABLE_NODE_API: true
+      NODE_API_PORT: 9091
+      NODE_TIMEOUT: "20s"
+      NODE_QUORUM_ID_LIST: "0,1"
+      NODE_DB_PATH: "/var/nodedb"
+      NODE_BLS_OPERATOR_STATE_RETRIVER: "{{.addresses.EigenDA.operatorStateRetriever}}"
+      NODE_EIGENDA_SERVICE_MANAGER: "{{.addresses.EigenDA.serviceManager}}"
+      NODE_PUBLIC_IP_PROVIDER: mockip
+      NODE_CHURNER_URL: "{{.services.churner.ip_address}}"
+      NODE_G1_PATH: /kzg/g1.point
+      NODE_G2_PATH: /kzg/g2.point
+      NODE_CACHE_PATH: /kzg/cache
+      NODE_SRS_ORDER: 3000
+      NODE_SRS_LOAD: 2900
+      NODE_CHAIN_RPC: "{{.http_rpc_url}}"
+      NODE_PRIVATE_KEY: "{{slice .keys.node2_ecdsa.private_key 2}}"
+      NODE_ECDSA_KEY_FILE: /keys/ecdsa/keys/1.ecdsa.key.json
+      NODE_ECDSA_KEY_PASSWORD: "{{.keys.node2_ecdsa.password}}"
+      NODE_BLS_KEY_FILE: /keys/bls/keys/1.bls.key.json
+      NODE_BLS_KEY_PASSWORD: "{{.keys.node2_bls.password}}"
+      NODE_REGISTER_AT_NODE_START: true
+      NODE_PUBLIC_IP_CHECK_INTERVAL: 0
+
+  - name: node3
+    image: eigenda-node
+    build_cmd: "docker build . -t eigenda-node --target node"
+    ports:
+      dispersal:
+        number: 8080
+        transport_protocol: TCP
+        application_protocol: "grpc"
+      retrieval:
+        number: 8081
+        transport_protocol: TCP
+        application_protocol: "grpc"
+      nodeapi:
+        number: 9091
+        transport_protocol: TCP
+        application_protocol: "http"
+      metrics:
+        number: 9100
+        transport_protocol: TCP
+        application_protocol: "http"
+    input:
+      /kzg/: kzg_config
+      /keys/ecdsa: node3_ecdsa
+      /keys/bls: node3_bls
+    env:
+      NODE_LOG_LEVEL: debug
+      NODE_VERBOSE: true
+      NODE_HOSTNAME: node3
+      NODE_DISPERSAL_PORT: 8080
+      NODE_RETRIEVAL_PORT: 8081
+      NODE_ENABLE_METRICS: true
+      NODE_METRICS_PORT: 9100
+      NODE_ENABLE_NODE_API: true
+      NODE_API_PORT: 9091
+      NODE_TIMEOUT: "20s"
+      NODE_QUORUM_ID_LIST: "0,1"
+      NODE_DB_PATH: "/var/nodedb"
+      NODE_BLS_OPERATOR_STATE_RETRIVER: "{{.addresses.EigenDA.operatorStateRetriever}}"
+      NODE_EIGENDA_SERVICE_MANAGER: "{{.addresses.EigenDA.serviceManager}}"
+      NODE_PUBLIC_IP_PROVIDER: mockip
+      NODE_CHURNER_URL: "{{.services.churner.ip_address}}"
+      NODE_G1_PATH: /kzg/g1.point
+      NODE_G2_PATH: /kzg/g2.point
+      NODE_CACHE_PATH: /kzg/cache
+      NODE_SRS_ORDER: 3000
+      NODE_SRS_LOAD: 2900
+      NODE_CHAIN_RPC: "{{.http_rpc_url}}"
+      NODE_PRIVATE_KEY: "{{slice .keys.node3_ecdsa.private_key 2}}"
+      NODE_ECDSA_KEY_FILE: /keys/ecdsa/keys/1.ecdsa.key.json
+      NODE_ECDSA_KEY_PASSWORD: "{{.keys.node3_ecdsa.password}}"
+      NODE_BLS_KEY_FILE: /keys/bls/keys/1.bls.key.json
+      NODE_BLS_KEY_PASSWORD: "{{.keys.node3_bls.password}}"
       NODE_REGISTER_AT_NODE_START: true
       NODE_PUBLIC_IP_CHECK_INTERVAL: 0
 
@@ -378,9 +488,17 @@ keys:
     type: ecdsa
   - name: staker1_key
     type: ecdsa
-  - name: operator1_ecdsa
+  - name: node1_ecdsa
     type: ecdsa
-  - name: operator1_bls
+  - name: node1_bls
+    type: bls
+  - name: node2_ecdsa
+    type: ecdsa
+  - name: node2_bls
+    type: bls
+  - name: node3_ecdsa
+    type: ecdsa
+  - name: node3_bls
     type: bls
   - name: disperser_key
     type: ecdsa
@@ -397,7 +515,7 @@ artifacts:
             "confirmerPrivateKey": "{{.keys.disperser_key.private_key}}",
             "stakerPrivateKeys": ["{{.keys.staker1_key.private_key}}"],
             "stakerTokenAmounts": [["0xe8d4a51000"], ["0xe8d4a51000"]],
-            "operatorPrivateKeys": ["{{.keys.operator1_ecdsa.private_key}}"],
+            "operatorPrivateKeys": ["{{.keys.node1_ecdsa.private_key}}", "{{.keys.node2_ecdsa.private_key}}", "{{.keys.node3_ecdsa.private_key}}"],
             "useDefaults": false,
             "eigenLayerCommunityMultisig": "{{.deployer_address}}",
             "eigenLayerOperationsMultisig": "{{.deployer_address}}",
