--- a/examples/hello_world.yaml
+++ b/examples/hello_world.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=../schema.json
+
 # Example devnet config file for the hello-world-avs example
 deployments:
   - name: EigenLayer
