--- a/examples/hello_world_local.yaml
+++ b/examples/hello_world_local.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=../schema.json
+
 # Local devnet config file for the hello-world-avs example
 # This file can be used inside the hello-world-avs repo to start
 # a devnet with any local changes
