--- a/examples/incredible_squaring.yaml
+++ b/examples/incredible_squaring.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=../schema.json
+
 # Example devnet config file for the incredible-squaring-avs example
 deployments:
   - type: EigenLayer
