--- a/src/config/default_config.yaml
+++ b/src/config/default_config.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://github.com/Layr-Labs/avs-devnet/blob/master/schema.json
 deployments:
   # Deploy EigenLayer
   - type: EigenLayer
